[package]
name = "nes6502"
version = "0.1.0"
edition = "2021"
authors = [
    "fekie <rust.crates@fekie.dev>",
    "FBIGlowie <144389458+FBIGlowie@users.noreply.github.com>",
]
description = "An emulated NES version of the 6502."
keywords = ["nes", "6502", "emulator"]
license = "MIT"
repository = "https://github.com/fekie/nes6502"
readme = "README.md"
categories = ["emulators"]


[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
sonic-rs = "0.3"
